    changes in R version 3.0.0, which introduced a \code{grid.force()}
    function. This reduces the need for special methods in this package
    to draw custom grobs.

    \item Renamed 'gridToSVG' to 'grid.export'. 'gridToSVG' is now
    deprecated and will produce a warning but will still work.
    'grid.export' should be used from now on. (Simon)

    \item Bumped R version dependency to R >= 3.0.0 because
    \code{gridToSVG()} now calls \code{grid.force()} before export

    \item Removed several \code{primToDev()} methods:
    \itemize{
      \item \code{primToDev.xaxis()}
      \item \code{primToDev.yaxis()}
      \item \code{grobToDev.roundrect()}
      \item \code{grobToDev.frame()}
      \item \code{grobToDev.cellGrob()}
    }

    \item Bug fix for multi-line text when cex != 1

    \item Initial implementation of pattern fills. Define pattern fills
    using 'pattern' and 'registerPatternFill' (and also
    'registerPatternFillRef' to reuse an existing definition). These can
    then be applied to grobs using 'grid.patternFill' and
    'patternFillGrob'. (Simon)

    \item Add a graphics device-like interface to gridSVG. Use 'gridsvg'
    to open a gridSVG device, and 'dev.off' to close it. (Simon)

    \item Added new 'gridSVG.newpage' function. It will clear all
    definitions of referenced content as well as calling
    'grid.newpage'. (Simon)

    \item Now allowing for a prefix to be applied to all SVG ID
    attributes. Particularly useful when including multiple gridSVG
    images in the same document as it ensures uniqueness of IDs between
    documents. This can be used by specifying the 'prefix' argument to
    'grid.export'. (Simon)

    \item New optional parameter to 'grid.export', 'addClasses'. If this
    argument is 'TRUE', then gridSVG will add an SVG class attribute to
    each grob or viewport it draws. The value of this attribute is what
    is produced by calling 'class' on the object. This is useful for